--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "server/index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/index.js",
-    "start": "node server.js"
+    "dev": "node server/index.js",
+    "start": "node server/index.js"
   },
   "keywords": [],
   "author": "",
